[tool.poetry]
name = "claude"
version = "0.8.3"
description = ""
authors = ["Lajos Santa <santa.lajos@gmail.com>"]
license = "MIT"
readme = "README.md"
include = ["claude/static/index.html", "claude/static/assets/*"]

[tool.poetry.dependencies]
python = "^3.10"
starlette = "^0.21.0"
graphene = "^3.1.1"
starlette-graphene3 = "^0.6.0"
pydantic = "^2.11.3"
uvicorn = { extras = ["standard"], version = "^0.18.3" }
httpx = "^0.23.0"
lxml = "^4.9.1"
cssselect = "^1.1.0"
Jinja2 = "^3.1.2"
orjson = "^3.8.1"
graphene-file-upload = "^1.3.0"
redis = "^4.5.4"


[tool.poetry.group.dev.dependencies]
invoke = "^2.0.0"
pytest = "^7.1.3"
pytest-watch = "^4.2.0"
pytest-asyncio = "^0.19.0"
pre-commit = "^2.20.0"
tabulate = "^0.9.0"
semver = "^2.13.0"
gitpython = "^3.1.31"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120

[tool.ruff]
line-length = 120
fix = true
